@@ -1,21 +1,18 @@
 package org.shax3.square.domain.scrap.service;
 
-import org.shax3.square.domain.debate.service.DebateService;
-import org.shax3.square.domain.scrap.dto.request.CreateScrapRequest;
-import org.shax3.square.domain.scrap.model.Scrap;
-import org.shax3.square.common.model.TargetType;
-import org.shax3.square.domain.scrap.repository.ScrapRepository;
-import org.shax3.square.domain.user.model.User;
-import org.shax3.square.exception.CustomException;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.shax3.square.common.model.TargetType;
+import org.shax3.square.domain.scrap.dto.request.CreateScrapRequest;
+import org.shax3.square.domain.scrap.model.Scrap;
+import org.shax3.square.domain.scrap.repository.ScrapRepository;
+import org.shax3.square.domain.user.model.User;
+import org.shax3.square.exception.CustomException;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -23,217 +20,98 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@DisplayName("ScrapService 테스트")
-public class ScrapServiceTest {
+@DisplayName("ScrapService 단위 테스트")
+class ScrapServiceTest {
 
     @Mock
     private ScrapRepository scrapRepository;
-
-    @Mock
-    private DebateService debateService;
 
     @InjectMocks
     private ScrapService scrapService;
 
     @Test
-    @DisplayName("createScrap - 대상이 Debate인 경우, debateService.findDebateById 호출 및 Scrap 저장 확인")
-    public void testCreateScrap_whenTargetIsDebate() {
+    @DisplayName("스크랩 생성 성공")
+    void createScrap_success() {
         // given
         User user = User.builder().build();
-        Long targetId = 1L;
         CreateScrapRequest request = mock(CreateScrapRequest.class);
         Scrap scrap = mock(Scrap.class);
 
         when(request.targetType()).thenReturn(TargetType.DEBATE);
-        when(request.targetId()).thenReturn(targetId);
+        when(request.targetId()).thenReturn(1L);
         when(request.to(user)).thenReturn(scrap);
-        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, targetId, TargetType.DEBATE))
-                .thenReturn(false);
+        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, 1L, TargetType.DEBATE)).thenReturn(false);
 
         // when
         scrapService.createScrap(user, request);
 
         // then
-        verify(debateService, times(1)).findDebateById(targetId);
-        verify(scrapRepository, times(1)).save(scrap);
+        verify(scrapRepository).save(scrap);
     }
 
     @Test
-    @DisplayName("createScrap - 대상이 Debate인 경우 중복 Scrap이 존재하면 CustomException 발생")
-    public void testCreateScrap_duplicateScrap_whenTargetIsDebate() {
+    @DisplayName("스크랩 생성 실패 - 이미 존재할 때")
+    void createScrap_duplicate() {
         // given
         User user = User.builder().build();
-        Long targetId = 50L;
         CreateScrapRequest request = mock(CreateScrapRequest.class);
-        when(request.targetType()).thenReturn(TargetType.DEBATE);
-        when(request.targetId()).thenReturn(targetId);
-        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, targetId, TargetType.DEBATE))
-                .thenReturn(true);
 
-        // when, then
+        when(request.targetType()).thenReturn(TargetType.POST);
+        when(request.targetId()).thenReturn(2L);
+        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, 2L, TargetType.POST)).thenReturn(true);
+
+        // when & then
         assertThatThrownBy(() -> scrapService.createScrap(user, request))
                 .isInstanceOf(CustomException.class);
 
-        verify(scrapRepository, never()).save(any(Scrap.class));
-    }
-
-
-//    @Test
-//    @DisplayName("createScrap - 대상이 Post인 경우 중복 Scrap이 존재하면 CustomException 발생")
-//    public void testCreateScrap_duplicateScrap_whenTargetIsPost() {
-//        // given
-//        User user = User.builder().build();
-//        Long targetId = 50L;
-//        CreateScrapRequest request = mock(CreateScrapRequest.class);
-//        when(request.targetType()).thenReturn(TargetType.POST);
-//        when(request.targetId()).thenReturn(targetId);
-//        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, targetId, TargetType.POST))
-//                .thenReturn(true);
-//
-//        // when, then
-//        assertThatThrownBy(() -> scrapService.createScrap(user, request))
-//                .isInstanceOf(CustomException.class);
-//
-//        verify(scrapRepository, never()).save(any(Scrap.class));
-//    }
-//
-//
-//    @Test
-//    @DisplayName("createScrap - 대상이 Post인 경우, debateService.findDebateById 미호출 및 Scrap 저장 확인")
-//    public void testCreateScrap_whenTargetIsPost() {
-//        // given
-//        User user = User.builder().build();
-//        Long targetId = 2L;
-//        CreateScrapRequest request = mock(CreateScrapRequest.class);
-//        Scrap scrap = mock(Scrap.class);
-//
-//        when(request.targetType()).thenReturn(TargetType.POST);
-//        when(request.targetId()).thenReturn(targetId);
-//        when(request.to(user)).thenReturn(scrap);
-//        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, targetId, TargetType.POST))
-//                .thenReturn(false);
-//
-//        // when
-//        scrapService.createScrap(user, request);
-//
-//        // then: POST의 경우 debateService.findDebateById는 호출되지 않아야 합니다.
-//        verify(debateService, never()).findDebateById(anyLong());
-//        verify(scrapRepository, times(1)).save(scrap);
-//    }
-
-    @Test
-    @DisplayName("deleteScrap - Scrap 삭제 메소드 호출 확인")
-    public void testDeleteScrap() {
-        // given
-        User user = User.builder().build();
-        Long targetId = 3L;
-        TargetType targetType = TargetType.DEBATE; // 혹은 POST
-
-        // when
-        scrapService.deleteScrap(user, targetId, targetType);
-
-        // then
-        verify(scrapRepository, times(1))
-                .deleteByUserAndTargetIdAndTargetType(user, targetId, targetType);
+        verify(scrapRepository, never()).save(any());
     }
 
     @Test
-    @DisplayName("getDebateScrap - 사용자 Debate Scrap 조회 시 올바른 targetId 리스트 반환 확인")
-    public void testGetDebateScrap() {
-        // given
+    @DisplayName("스크랩 삭제")
+    void deleteScrap_success() {
         User user = User.builder().build();
-        Scrap scrap1 = mock(Scrap.class);
-        Scrap scrap2 = mock(Scrap.class);
-        when(scrap1.getTargetId()).thenReturn(1L);
-        when(scrap2.getTargetId()).thenReturn(2L);
+        scrapService.deleteScrap(user, 1L, TargetType.DEBATE);
+        verify(scrapRepository).deleteByUserAndTargetIdAndTargetType(user, 1L, TargetType.DEBATE);
+    }
+
+    @Test
+    @DisplayName("스크랩 목록 조회")
+    void getScrapIds_success() {
+        User user = User.builder().build();
+        Scrap scrap1 = Scrap.builder().targetId(1L).build();
+        Scrap scrap2 = Scrap.builder().targetId(2L).build();
+
         when(scrapRepository.findByUserAndTargetType(user, TargetType.DEBATE))
-                .thenReturn(Arrays.asList(scrap1, scrap2));
+                .thenReturn(List.of(scrap1, scrap2));
 
-        // when
-        List<Long> result = scrapService.getDebateScrap(user);
+        List<Long> ids = scrapService.getScrapIds(user, TargetType.DEBATE);
 
-        // then
-        assertThat(result).containsExactly(1L, 2L);
+        assertThat(ids).containsExactly(1L, 2L);
     }
 
     @Test
-    @DisplayName("getPostScrap - 사용자 Post Scrap 조회 시 올바른 targetId 리스트 반환 확인")
-    public void testGetPostScrap() {
-        // given
+    @DisplayName("스크랩 존재 여부 확인")
+    void isScrapExist() {
         User user = User.builder().build();
-        Scrap scrap = mock(Scrap.class);
-        when(scrap.getTargetId()).thenReturn(5L);
-        when(scrapRepository.findByUserAndTargetType(user, TargetType.POST))
-                .thenReturn(Collections.singletonList(scrap));
 
-        // when
-        List<Long> result = scrapService.getPostScrap(user);
+        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, 1L, TargetType.DEBATE)).thenReturn(true);
 
-        // then
-        assertThat(result).containsExactly(5L);
+        boolean exists = scrapService.isTargetScraped(user, 1L, TargetType.DEBATE);
+        assertThat(exists).isTrue();
     }
 
     @Test
-    @DisplayName("isDebateScraped - 대상 Debate Scrap이 존재하는 경우 true 반환 확인")
-    public void testIsDebateScraped_whenPresent() {
-        // given
+    @DisplayName("페이지네이션된 스크랩 조회")
+    void getPaginatedScraps() {
         User user = User.builder().build();
-        Long debateId = 10L;
-        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, debateId, TargetType.DEBATE))
-                .thenReturn(true);
+        Scrap scrap = Scrap.builder().targetId(3L).build();
 
-        // when
-        boolean result = scrapService.isDebateScraped(user, debateId);
+        when(scrapRepository.findScrapsByUserAndType(user, TargetType.DEBATE, null, 5))
+                .thenReturn(List.of(scrap));
 
-        // then
-        assertThat(result).isTrue();
-    }
+        List<Scrap> result = scrapService.getPaginatedScraps(user, TargetType.DEBATE, null, 5);
 
-    @Test
-    @DisplayName("isDebateScraped - 대상 Debate Scrap이 존재하지 않는 경우 false 반환 확인")
-    public void testIsDebateScraped_whenNotPresent() {
-        // given
-        User user = User.builder().build();
-        Long debateId = 10L;
-        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, debateId, TargetType.DEBATE))
-                .thenReturn(false);
-
-        // when
-        boolean result = scrapService.isDebateScraped(user, debateId);
-
-        // then
-        assertThat(result).isFalse();
-    }
-
-    @Test
-    @DisplayName("isPostScraped - 대상 Post Scrap이 존재하는 경우 true 반환 확인")
-    public void testIsPostScraped_whenPresent() {
-        // given
-        User user = User.builder().build();
-        Long postId = 20L;
-        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, postId, TargetType.POST))
-                .thenReturn(true);
-
-        // when
-        boolean result = scrapService.isPostScraped(user, postId);
-
-        // then
-        assertThat(result).isTrue();
-    }
-
-    @Test
-    @DisplayName("isPostScraped - 대상 Post Scrap이 존재하지 않는 경우 false 반환 확인")
-    public void testIsPostScraped_whenNotPresent() {
-        // given
-        User user = User.builder().build();
-        Long postId = 20L;
-        when(scrapRepository.existsByUserAndTargetIdAndTargetType(user, postId, TargetType.POST))
-                .thenReturn(false);
-
-        // when
-        boolean result = scrapService.isPostScraped(user, postId);
-
-        // then
-        assertThat(result).isFalse();
+        assertThat(result).hasSize(1);
     }
 }
